[package]
name = "gibblox-zip"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
default = []
std = []

[dependencies]
async-lock = { version = "3.4", default-features = false }
async-trait = { workspace = true }
gibblox-core = { path = "../gibblox-core" }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

[dev-dependencies]
futures = { version = "0.3.31", default-features = false, features = ["executor"] }
