[package]
name = "gobblytes-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Filesystem traits, OSTree path wrapper, and shared test helpers."

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
