[package]
name = "gobblytes-erofs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = { workspace = true }
gobblytes-core = { path = "../gobblytes-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gibblox-core = { path = "../gibblox-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gibblox-core = { path = "../gibblox-core", features = ["std"] }
