[package]
name = "gobblytes-erofs"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.100"
async-trait = { workspace = true }
erofs-rs = { workspace = true }
gobblytes-core = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gibblox-core = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gibblox-core = { workspace = true, features = ["std"] }
